--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,19 +4,30 @@ version: 2.1
 
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
+on: 
+  push:
+    branch:
+      - development
+name: Deploy website on push 💨
 jobs:
-  say-hello:
+  web-deploy:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
-    docker:
-      - image: cimg/base:stable
+    name: 🔥 Deploy
+    runs-on: ubuntu-latest
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
-      - checkout
-      - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+      - name: get latest cod
+        uses: actions/checkout@v2
+        
+      - name: sync files
+        uses: SamKirkland/FTP-Deploy-Action@4.3.0
+        with: 
+          server: ns1-500.axc.nl
+          username: ${{ secrets.ftp_username }}
+          password: ${{ secrets.ftp_password }}
+          server-dir: tcudjoe.com
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
