--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -19,6 +19,6 @@ jobs:
         uses: SamKirkland/FTP-Deploy-Action@4.3.0
         with: 
           server: ns1-500.axc.nl
-          username: ${{ secrets_ftp_username }}
-          password: ${{ secrets_ftp_password }}
+          username: ${{ secrets.secrets_ftp_username }}
+          password: ${{ secrets.secrets_ftp_password }}
           server-dir: tcudjoe.com
