--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -21,4 +21,4 @@ jobs:
           server: ns1-500.axc.nl
           username: ${{ secrets.ftp_username }}
           password: ${{ secrets.ftp_password }}
-          server-dir: tcudjoe.com
+          server-dir: domains/tcudjoe.com/
